# blogship

./: .gitignore  Cargo.toml  readme.md  run_dev.sh
blogship_srv/: Cargo.toml  build.sh  readme.md  run.sh  run_dev.sh  run_prod.sh
blogship_srv/src/: errors.rs  lib.rs
blogship_srv/src/app/: server.rs
blogship_srv/src/routes/: common.rs
blogship_ui/: Cargo.toml  build.sh  index.html  run_dev.sh
blogship_ui/src/: main.rs
