[package]
name = "blogship_srv"
version = "0.1.0"
edition = "2021"
authors = [ "dxps <marius.ileana@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blogshipd"
path = "src/bin/blogshipd.rs"

[dependencies]
rocket = "0.5.0-rc.2"
