[package]
name = "blogship_srv"
version = "0.1.0"
edition = "2021"
authors = [ "dxps <marius.ileana@gmail.com>" ]

[[bin]]
name = "blogshipd"
path = "src/bin/blogshipd.rs"

[dependencies]
axum = "0.5.13"
axum-extra = { version = "0.3.6", features = ["spa"] }
clap = { version = "3.2.16", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
